--- a/index.html
+++ b/index.html
@@ -5,9 +5,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+
+  <!-- Header Part Start -->
+
+  <header>
+    <div class="banner-container">
+      <div class="banner-left-part">
+        <h1 class="banner-heading">Let's make beautiful flowers a part of your life.</h1>
+        <p class="banner-description">It is a long established fact that a reader will be distracted by the readable
+          content of a page when looking
+          at its
+          layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+        <button class="btn-primary">Shop Now</button>
+      </div>
+      <div class="banner-right-part">
+        <img class="banner-img" src="images/pngwing 10.png" alt="">
+      </div>
+    </div>
+  </header>
+
+  <!-- Header Part End -->
+
+  <!-- Featured Part Start -->
+
+  <section class="featured-part">
+    <div class="title">
+      <h2 class="title-heading">Our Featured Flowers</h2>
+      <p class="title-info">It is a long established fact that a reader will be distracted by the readable content of a
+        page when looking
+        at its layout.
+      </p>
+    </div>
+    <div class="featured-container">
+      <div class="featured-box">
+        <div class="box-1 box">
+          <img class="featured-box-1" src="images/pngwing 6.png" alt="">
+
+        </div>
+        <h5 class="featued-pic-info">Pink Flower Tree</h5>
+      </div>
+      <div class="featured-box">
+        <div class="box-2 box">
+          <img class="featured-box-1" src="images/pngwing 5.png" alt="">
+
+        </div>
+        <h5 class="featued-pic-info">Pink Flower Tree</h5>
+      </div>
+      <div class="featured-box">
+        <div class="box-3 box">
+          <img class="featured-box-1" src="images/pngwing 7.png" alt="">
+
+        </div>
+        <h5 class="featued-pic-info">Pink Flower Tree</h5>
+      </div>
+    </div>
+  </section>
+
+  <!-- Featured Part End -->
+
+
 
 </body>
 
