--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="featured-box">
         <div class="box-2 box">
-          <img class="featured-box-1" src="images/pngwing 5.png" alt="">
+          <img class="featured-box-1 box-2-img" src="images/pngwing 5.png" alt="">
 
         </div>
         <h5 class="featued-pic-info">Pink Flower Tree</h5>
@@ -71,7 +71,43 @@
 
   <!-- Featured Part End -->
 
+  <!-- Featured bottom part start -->
 
+  <section class="featured-bottom-container">
+    <div class="box">
+      <img src="images/Group 57.png" alt="">
+      <h5>Same Day Delivery. Click & Collect.</h5>
+    </div>
+    <div class="box">
+      <img src="images/Group 58.png" alt="">
+      <h5>Fresh Flowers. Local Growers.</h5>
+    </div>
+    <div class="box">
+      <img src="images/Group 59.png" alt="">
+      <h5>24/7 Free Support</h5>
+    </div>
+  </section>
+
+
+  <!-- Featured bottom part end -->
+
+  <!-- Discount part start -->
+
+  <section class="discount-container">
+    <div class="discount-left-part">
+      <h2 class="discount-heading">Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+      <p class="discount-info">It is a long established fact that a reader will be distracted by the readable
+        content of a page when looking at its layout</p>
+      <button class="btn-primary discount-btn">Sign Up</button>
+    </div>
+    <div class="discount-right-part">
+      <img class="discount-img" src="images/pngwing 8.png" alt="">
+    </div>
+  </section>
+
+  <!-- Discount part end -->
+
+  <!-- Image slider part S -->
 
 </body>
 
