--- a/index.html
+++ b/index.html
@@ -33,81 +33,152 @@
   </header>
 
   <!-- Header Part End -->
+  <main>
+    <!-- Featured Part Start -->
 
-  <!-- Featured Part Start -->
+    <section class="featured-part">
+      <div class="title">
+        <h2 class="title-heading">Our Featured Flowers</h2>
+        <p class="title-info">It is a long established fact that a reader will be distracted by the readable content of
+          a
+          page when looking
+          at its layout.
+        </p>
+      </div>
+      <div class="featured-container">
+        <div class="featured-box">
+          <div class="box-1 box">
+            <img class="featured-box-1" src="images/pngwing 6.png" alt="">
 
-  <section class="featured-part">
+          </div>
+          <h5 class="featued-pic-info">Pink Flower Tree</h5>
+        </div>
+        <div class="featured-box">
+          <div class="box-2 box">
+            <img class="featured-box-1 box-2-img" src="images/pngwing 5.png" alt="">
+
+          </div>
+          <h5 class="featued-pic-info">Pink Flower Tree</h5>
+        </div>
+        <div class="featured-box">
+          <div class="box-3 box">
+            <img class="featured-box-1" src="images/pngwing 7.png" alt="">
+
+          </div>
+          <h5 class="featued-pic-info">Pink Flower Tree</h5>
+        </div>
+      </div>
+    </section>
+
+    <!-- Featured Part End -->
+
+    <!-- Featured bottom part start -->
+
+    <section class="featured-bottom-container">
+      <div class="box">
+        <img src="images/Group 57.png" alt="">
+        <h5>Same Day Delivery. Click & Collect.</h5>
+      </div>
+      <div class="box">
+        <img src="images/Group 58.png" alt="">
+        <h5>Fresh Flowers. Local Growers.</h5>
+      </div>
+      <div class="box">
+        <img src="images/Group 59.png" alt="">
+        <h5>24/7 Free Support</h5>
+      </div>
+    </section>
+
+
+    <!-- Featured bottom part end -->
+
+    <!-- Discount part start -->
+
+    <section class="discount-container">
+      <div class="discount-left-part">
+        <h2 class="discount-heading">Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+        <p class="discount-info">It is a long established fact that a reader will be distracted by the readable
+          content of a page when looking at its layout</p>
+        <button class="btn-primary discount-btn">Sign Up</button>
+      </div>
+      <div class="discount-right-part">
+        <img class="discount-img" src="images/pngwing 8.png" alt="">
+      </div>
+    </section>
+
+    <!-- Discount part end -->
+
+    <!-- slider part start -->
+
+    <section class="slider-part">
+      <div class="title">
+        <h2 class="title-heading">Instagram</h2>
+        <p class="title-info">It is a long established fact that a reader will be distracted by the readable content of
+          a
+          page when looking
+          at its
+          layout.</p>
+      </div>
+      <div class="slider-container">
+        <div class="image-layout">
+          <img class="layout-img" src="images/Flower 01.png" alt="">
+        </div>
+        <div class="image-layout">
+          <img class="layout-img" src="images/Rectangle 4.png" alt="">
+        </div>
+        <div class="image-layout">
+          <img class="layout-img" src="images/Rectangle 5.png" alt="">
+        </div>
+        <div class="image-layout">
+          <img class="layout-img" src="images/Rectangle 6.png" alt="">
+        </div>
+      </div>
+    </section>
+
+
+    <!--  slider part end-->
+
+    <!-- Contact part start -->
+
+    <section class="contact-container">
+      <div class="contact">
+        <div class="title">
+          <h2 class="title-heading">
+            Get The Latest Deals
+          </h2>
+          <p class="title-info">
+            $30 coupon for first shopping
+          </p>
+        </div>
+        <div class="input-form">
+          <input class="contact-input" type="email" placeholder="Enter your email here...">
+          <button class="btn-primary">Subscribe</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact part end -->
+
+  </main>
+
+  <!-- footer part start -->
+
+  <footer class="footer-container">
     <div class="title">
-      <h2 class="title-heading">Our Featured Flowers</h2>
-      <p class="title-info">It is a long established fact that a reader will be distracted by the readable content of a
+      <h2 class="title-heading contact-heading"><span class="primary-color">Flower</span> Shop</h2>
+      <p class="title-info contact-info">It is a long established fact that a reader will be distracted by the readable
+        content of a
         page when looking
-        at its layout.
-      </p>
+        at its
+        layout.</p>
+
     </div>
-    <div class="featured-container">
-      <div class="featured-box">
-        <div class="box-1 box">
-          <img class="featured-box-1" src="images/pngwing 6.png" alt="">
-
-        </div>
-        <h5 class="featued-pic-info">Pink Flower Tree</h5>
-      </div>
-      <div class="featured-box">
-        <div class="box-2 box">
-          <img class="featured-box-1 box-2-img" src="images/pngwing 5.png" alt="">
-
-        </div>
-        <h5 class="featued-pic-info">Pink Flower Tree</h5>
-      </div>
-      <div class="featured-box">
-        <div class="box-3 box">
-          <img class="featured-box-1" src="images/pngwing 7.png" alt="">
-
-        </div>
-        <h5 class="featued-pic-info">Pink Flower Tree</h5>
-      </div>
-    </div>
-  </section>
-
-  <!-- Featured Part End -->
-
-  <!-- Featured bottom part start -->
-
-  <section class="featured-bottom-container">
-    <div class="box">
-      <img src="images/Group 57.png" alt="">
-      <h5>Same Day Delivery. Click & Collect.</h5>
-    </div>
-    <div class="box">
-      <img src="images/Group 58.png" alt="">
-      <h5>Fresh Flowers. Local Growers.</h5>
-    </div>
-    <div class="box">
-      <img src="images/Group 59.png" alt="">
-      <h5>24/7 Free Support</h5>
-    </div>
-  </section>
+    <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+  </footer>
 
 
-  <!-- Featured bottom part end -->
 
-  <!-- Discount part start -->
-
-  <section class="discount-container">
-    <div class="discount-left-part">
-      <h2 class="discount-heading">Hot Deal ! Sale Up To 25% <span>Off</span></h2>
-      <p class="discount-info">It is a long established fact that a reader will be distracted by the readable
-        content of a page when looking at its layout</p>
-      <button class="btn-primary discount-btn">Sign Up</button>
-    </div>
-    <div class="discount-right-part">
-      <img class="discount-img" src="images/pngwing 8.png" alt="">
-    </div>
-  </section>
-
-  <!-- Discount part end -->
-
-  <!-- Image slider part S -->
+  <!-- footer part end -->
 
 </body>
 
