--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Flower</title>
+  <link rel="shortcut icon" href="images/flower.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -92,6 +93,47 @@
 
     <!-- Featured bottom part end -->
 
+    <!-- Flower info part start -->
+
+    <section>
+      <div class="title">
+        <h2 class="title-heading">
+          Flower Information
+        </h2>
+        <p class="title-info">Here are some flower facts so that we know something about different flowers</p>
+      </div>
+      <div class="flower-info-container">
+        <div class="flower">
+          <img class="flower-info-img flower-1" src="images/flower info 1 .jpg" alt="">
+          <p class="flower-info-des">The lily is a genus of flowering plant. There are many species of lilies, like
+            trumpet lilies and tiger
+            lilies. They are
+            usually quite tall, and are perennials ...</p>
+        </div>
+        <div class="flower">
+          <img class="flower-info-img" src="images/flower info 2 .jpg" alt="">
+          <p class="flower-info-des">Sunflower "whole seed" (fruit) are sold as a snack food, after roasting in ovens,
+            with or without salt added. Sunflowers
+            can be processed ...</p>
+        </div>
+        <div class="flower">
+          <img class="flower-info-img" src="images/flower info 3 .jpg" alt="">
+          <p class="flower-info-des">Their stems are usually prickly and their glossy, green leaves have toothed edges.
+            Rose flowers vary in size and shape They burst with colours ...</p>
+        </div>
+        <div class="flower">
+          <img class="flower-info-img" src="images/flower info 4 .jpg" alt="">
+          <p class="flower-info-des">Lotus-- The Aquatic flower blooming most beautifully from the deepest and thick
+            mud. It is a perennially blooming flower
+            with striking ...</p>
+        </div>
+      </div>
+    </section>
+
+
+
+    <!-- Flower info part end -->
+
     <!-- Discount part start -->
 
     <section class="discount-container">
@@ -175,8 +217,6 @@
     </div>
     <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
   </footer>
-
-
 
   <!-- footer part end -->
 
